Implemented elementary CRUD
Changelog

1. Created function for displaying user list.
2. Created api and method for updating user list, bounds and validation not set yet.
3. Created delete functionality, utilised html deletion + database deletion for performance.
4. Troubleshot some issues with paths, queries and changed some semantic elements.

To-do
1. Offline database switching for anime.
2. Manifest and service worker functionality.
3. Implementing cache for offline functionality when in active sessions.
4. Input validation.
5. QoL HTML
6. May add note feature to userlisting.

--- a/public/style.css
+++ b/public/style.css
@@ -54,11 +54,7 @@ body {
     background-color: red;
 }
 
-datalist {
-    appearance: none;
-    height: 100%;
-    width: 100%;
-}
+
 
 .main-content {
     display: flex;
@@ -184,16 +180,24 @@ datalist {
     background-color: #555;
 }
 
-.personallist {
+.personallist_container {
     background-color: rgb(173, 150, 150);
     border-radius: 5px;
     padding: 1rem;
+    height: 90%;
     overflow-y: auto;
 }
 
-.personallist ul {
+#personallist {
     list-style-type: none;
     padding: 0;
+}
+
+#personallist > li > div { 
+    height: 100px;
+    width: 100%;
+    background-color: red;
+    border-radius: 10px;
 }
 
 .popup {
