Validation and data integrity features.
Changelog
1. Made it so that letters cannot be input into the field (some scientific letters such as e kept being able to bypass IsNaN due to format such as scientific numbers existing)

2. Made it so that it reverts the value to the last valid upon any invalid request being made.

3. Made some error alerts to let the user know, made more troubleshooting messages.

4. Attempted to add animations, resulted in the userlist being clunky due to seeing an animation being played on every entry.

5. Fixed some bugs regarding list not showing up.

Todo
1. Offline database for anime
2. Potential age rating filtering
3. Potential note taker
4. QoL and potential buttons for incrementing numbers vs bad looking default one.
5. UI design

--- a/public/style.css
+++ b/public/style.css
@@ -180,7 +180,7 @@ body {
     background-color: #555;
 }
 
-.personallist_container {
+.personallist > li > div {
     background-color: rgb(173, 150, 150);
     border-radius: 5px;
     padding: 1rem;
@@ -193,7 +193,14 @@ body {
     padding: 0;
 }
 
-#personallist > li > div { 
+#personallist > li {
+    margin-top: 10px;
+}
+
+
+
+
+.anime-item-container { 
     height: 100px;
     width: 100%;
     background-color: red;
