--- a/public/style.css
+++ b/public/style.css
@@ -152,6 +152,7 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 15px;
     width: 200px;
+    margin: 20px;
     text-align: center;
 }
 
