Corrupted data prevention.
Changelog
1. Prevented any anime data that does not return a satisfactory value from being displayed in the first place.

--- a/public/style.css
+++ b/public/style.css
@@ -208,7 +208,8 @@ body {
 #personallist {
     list-style-type: none;
     padding: 0;
-}
+    max-height: 750px;
+    overflow-y: auto;}
 
 #personallist > li {
     margin-top: 10px;
@@ -275,6 +276,10 @@ body {
 
     .anime-card {
         width: 100%;
+    }
+
+    #personallist{
+        max-height: 200px;
     }
 }
 
