--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+
+
 body {
     font-family: Arial, sans-serif;
     height: 100vh;
@@ -16,37 +18,6 @@ body {
     height: 100vh;
 }
 
-.sidebar {
-    min-width: 50px;
-    background-color: grey;
-    padding: 1rem;
-    color: white;
-    transition: 0.3s ease-in-out;
-    overflow-y: auto;
-}
-
-.sidebar.active {
-    min-width: 300px;
-}
-
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 2rem;
-}
-
-.sidebar ul li {
-    margin-bottom: 1rem;
-}
-
-.sidebar ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.sidebar ul li a:hover {
-    text-decoration: underline;
-}
 
 #buttonicon {
     cursor: pointer;
@@ -126,9 +97,10 @@ body {
 
 .animelistcontainer {
     background-color: blue;
+    border-radius: 10px;
     width: 100%;
-    min-height: 100px;
-    max-height: 500px;
+    min-height: 500px;
+    max-height: 650px;
     overflow-y: auto;
 }
 
@@ -197,24 +169,25 @@ body {
     background-color: #555;
 }
 
-.personallist > li > div {
-    background-color: rgb(173, 150, 150);
-    border-radius: 5px;
-    padding: 1rem;
-    height: 90%;
-    overflow-y: auto;
-}
+
 
 #personallist {
     list-style-type: none;
     padding: 0;
-    max-height: 750px;
-    overflow-y: auto;}
+    max-height: 800px;
+    overflow-y: auto;
+}
 
 #personallist > li {
     margin-top: 10px;
 }
 
+.buttoncontainer{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
@@ -270,6 +243,10 @@ body {
         grid-template-columns: 1fr;
     }
 
+    .animelistcontainer{
+        max-height: 300px;
+    }
+
     .search-form {
         grid-column: 1 / 2;
     }
@@ -278,21 +255,32 @@ body {
         width: 100%;
     }
 
-    #personallist{
-        max-height: 200px;
+    .personallist_container{
+        max-height: 150px;
     }
+
+    #personallist{
+        height: 150px;
+    }
+
+    .librarycontainer{
+        max-height: 500px;
+    }
+
 }
 
 
 #next{
-    height: 100px;
+    height: 50px;
     background-color: red;
     width: 100px;
+    border-radius: 10px;
 }
 #before{
-    height: 100px;
+    height: 50px;
     background-color: blue;
     width: 100px;
+    border-radius: 10px;
 }
 
 
