--- a/public/style.css
+++ b/public/style.css
@@ -43,9 +43,11 @@ body {
     justify-content: center;
 }
 
-.logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+
+
+.logo img{
+    height: 3em;
+    width:3em;
 }
 
 .content {
@@ -194,7 +196,18 @@ body {
 .anime-item-container { 
     height: 100px;
     width: 100%;
-    background-color: red;
+    background-color: rgb(176, 172, 172);
+    border-radius: 0.5rem;
+}
+
+.progress-section{
+    background: red;
+}
+
+.progress-input{
+    background: blue;
+    border-style: none;
+    height: 50px;
     border-radius: 10px;
 }
 
@@ -202,6 +215,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    padding: 10%;
     width: 100%;
     height: 100%;
     display: flex;
@@ -214,18 +228,37 @@ body {
 .popup-content {
     background: white;
     padding: 20px;
+    scroll-behavior: auto;
+    height: 400px;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
     max-width: 500px;
     width: 90%;
 }
+
+.synopsiscontainer{
+    height: 70%;
+    width: 100%;
+    overflow-y: auto;
+}
+
+
+
+
 
 .popup-close {
     background-color: #333;
     color: white;
     padding: 0.5rem;
+    margin: 0.5rem;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.popup_heading{
+    text-align: center;
 }
 
 .popup-close:hover {
@@ -238,6 +271,7 @@ body {
     border-radius: 5px;
     border-style: none;
     width: 50px;
+    margin-right: 0.2rem;
     color: white;
 }
 
