--- a/public/style.css
+++ b/public/style.css
@@ -175,6 +175,16 @@ body {
     border-radius: 8px;
 }
 
+.anime-item-container{
+    margin-top: 5%;
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    background-color: grey;
+}
+
 /* Buttons within Cards */
 .description-button {
     margin-top: 10px;
@@ -212,7 +222,14 @@ body {
     padding: 0;
     max-height: 400px;
     overflow-y: auto;
+    margin-top: 10px;
+    border-radius: 10px;
 
+}
+
+.animeTitle{
+    align-self: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #personallist > li {
@@ -225,6 +242,15 @@ body {
     align-items: center;
 }
 
+.delete-button{
+    background-color: rgb(241, 191, 111);
+    justify-self: center;
+    height: 2rem;
+    margin-top: 1%;
+    border-radius: 5px;
+    border-style: none;
+    width: 100%;
+}
 /* Progress Section */
 .progress-section {
     background: #ffb74d; /* Pastel orange */
